# pybendt

./: README.md  pyproject.toml  run.py
examples/: Config.py  Example.ipynb
pybendt/: atom.py  pseudorandom.py  reaction.py
src/pybendt/: atom.py  interaction.py  pseudorandom.py  reaction.py
tests/: test_atom.py  test_interaction.py
