[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pybendt"
version = "0.0.4"
authors = [
  { name="Tomasz Skóra", email="tskora@sci.utah.edu" },
]
description = "Brownian Elastic Networks with Dynamic Topology"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tskora/pybendt"
"Bug Tracker" = "https://github.com/tskora/pybendt/issues"